--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,10 @@
             "sourceMaps": true,
             "name": "Launch Program",
             "program": "${workspaceFolder}/examples/example1.js",
+            "args": [
+                "-p 8089",
+                "-h 127.0.0.1"
+            ],
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
