--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/boom": "^7.2.0",
     "@types/express": "^4.16.0",
+    "@types/minimist": "^1.2.0",
     "@types/request": "^2.47.1",
+    "@types/request-promise-native": "^1.0.15",
     "body-parser": "^1.18.3",
+    "boom": "^7.2.0",
     "express": "^4.16.3",
-    "request": "^2.88.0"
+    "minimist": "^1.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
