--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "cors-proxy": "cli/cors-proxy.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
