Added exclude to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,8 @@
         "noImplicitAny": false,
         "sourceMap": true,
         "declaration": true
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
